# libkolibre-daisyonline

./: Makefile.am  README  README.md  configure.ac  libkolibre-daisyonline.pc.in  mainpage.dox
src/: Announcement.cpp  Announcement.h  Audio.cpp  Audio.h  Bookmark.cpp  Bookmark.h  BookmarkAudio.cpp  BookmarkAudio.h  BookmarkBase.cpp  BookmarkBase.h  BookmarkChoice.cpp  BookmarkChoice.h  BookmarkNote.cpp  BookmarkNote.h  BookmarkSet.cpp  BookmarkSet.h  BookmarkTitle.cpp  BookmarkTitle.h  Choice.cpp  Choice.h  ContentItem.cpp  ContentItem.h  ContentList.cpp  ContentList.h  ContentMetadata.cpp  ContentMetadata.h  ContentResources.cpp  ContentResources.h  DaisyOnlineHandler.cpp  DaisyOnlineHandler.h  Hilite.cpp  Hilite.h  HiliteEnd.cpp  HiliteEnd.h  HiliteStart.cpp  HiliteStart.h  InputQuestion.cpp  InputQuestion.h  Label.cpp  Label.h  (+19 more)
src/stubs/: Kolibre_DaisyOnlineClient.vcproj  Makefile.am  adb_AgreementMethod.c  adb_AgreementMethod.h  adb_AgreementMethodType.c  adb_AgreementMethodType.h  adb_CanonicalizationMethod.c  adb_CanonicalizationMethod.h  adb_CanonicalizationMethodType.c  adb_CanonicalizationMethodType.h  adb_CipherData.c  adb_CipherData.h  adb_CipherDataType.c  adb_CipherDataType.h  adb_CipherReference.c  adb_CipherReference.h  adb_CipherReferenceType.c  adb_CipherReferenceType.h  adb_CryptoBinary.c  adb_CryptoBinary.h  adb_DSAKeyValue.c  adb_DSAKeyValue.h  adb_DSAKeyValueType.c  adb_DSAKeyValueType.h  adb_DSAKeyValueTypeSequence_type0.c  adb_DSAKeyValueTypeSequence_type0.h  adb_DSAKeyValueTypeSequence_type1.c  adb_DSAKeyValueTypeSequence_type1.h  adb_DigestMethod.c  adb_DigestMethod.h  adb_DigestMethodType.c  adb_DigestMethodType.h  adb_DigestValue.c  adb_DigestValue.h  adb_DigestValueType.c  adb_DigestValueType.h  adb_EncryptedData.c  adb_EncryptedData.h  adb_EncryptedDataType.c  adb_EncryptedDataType.h  (+474 more)
tests/: Makefile.am  fakesoapresponder.sh  soaptester.sh
tests/daisyonline-service-10/: Makefile.am  asyncsessionestablishment.c  asyncsessionestablishment.sh  errorinvaliduri.cpp  errorinvaliduri.sh  errormissinglangattribute.cpp  errormissinglangattribute.sh  errornonetwork.cpp  errornonetwork.sh  falseresult.cpp  falseresult.sh  faultinternalservererror.cpp  faultinvalidoperation.cpp  faultinvalidoperation.sh  faultinvalidparameter.cpp  faultnoactivesession.cpp  faultoperationnotsupported.cpp  faultoperationnotsupported.sh  getbookmarks.cpp  getbookmarks.sh  getcontentlist.cpp  getcontentlist.sh  getcontentmetadata.cpp  getcontentmetadata.sh  getcontentresources.cpp  getcontentresources.sh  getquestions.cpp  getquestions.sh  getserviceannouncements.cpp  getserviceannouncements.sh  getserviceattributes.cpp  getserviceattributes.sh  issuecontent.cpp  issuecontent.sh  logoff.cpp  logon.cpp  logon.sh  markannouncementsasread.cpp  markannouncementsasread.sh  memoryleak.cpp  (+11 more)
tests/daisyonline-service-10/asyncSessionEstablishment/: 3_setReadingSystemAttributes
tests/daisyonline-service-10/false/: 1_logOn  2_setReadingSystemAttributes  3_issueContent  4_returnContent  5_markAnnouncementsAsRead  6_logOff  7_setBookmarks
tests/daisyonline-service-10/faults/internalServerError/: 10_markAnnouncementsAsRead  11_logOff  12_setBookmarks  13_getBookmarks  14_getQuestions  1_logOn  2_getServiceAttributes  3_setReadingSystemAttributes  4_getContentList  5_getContentMetadata  6_issueContent  7_getContentResources  8_returnContent  9_getServiceAnnouncements
tests/daisyonline-service-10/faults/invalidOperation/: 10_markAnnouncementsAsRead  11_logOff  12_setBookmarks  13_getBookmarks  14_getQuestions  1_logOn  2_getServiceAttributes  3_setReadingSystemAttributes  4_getContentList  5_getContentMetadata  6_issueContent  7_getContentResources  8_returnContent  9_getServiceAnnouncements
tests/daisyonline-service-10/faults/invalidParameter/: 10_getQuestions  1_setReadingSystemAttributes  2_getContentList  3_getContentMetadata  4_issueContent  5_getContentResources  6_returnContent  7_markAnnouncementsAsRead  8_setBookmarks  9_getBookmarks
tests/daisyonline-service-10/faults/noActiveSession/: 10_setBookmarks  11_getBookmarks  12_getQuestions  1_getServiceAttributes  2_setReadingSystemAttributes  3_getContentList  4_getContentMetadata  5_issueContent  6_getContentResources  7_returnContent  8_getServiceAnnouncements  9_markAnnouncementsAsRead
tests/daisyonline-service-10/faults/operationNotSupported/: 1_returnContent  2_getServiceAnnouncements  3_markAnnouncementsAsRead  4_setBookmarks  5_getBookmarks  6_getQuestions
tests/daisyonline-service-10/getBookmarks/: 1_getBookmarks  2_getBookmarks  3_getBookmarks
tests/daisyonline-service-10/getContentResources/: 1_getContentResources
tests/daisyonline-service-10/getQuestions/: 1_getQuestions  2_getQuestions  3_getQuestions  4_getQuestions  5_getQuestions
tests/daisyonline-service-10/getServiceAnnouncements/: 1_getServiceAnnouncements
tests/daisyonline-service-10/getServiceAttributes/: 1_getServiceAttributes
tests/daisyonline-service-10/logOff/: 1_logOff
tests/daisyonline-service-10/logOn/: 1_logOn
tests/daisyonline-service-10/markAnnouncementsAsRead/: 1_markAnnouncementsAsRead
tests/daisyonline-service-10/memoryLeak/: 11_setBookmarks  13_getQuestions  4_getContentList  5_getContentMetadata  6_issueContent  8_returnContent
tests/daisyonline-service-10/missingLangAttribute/: 1_getContentList
tests/daisyonline-service-10/setBookmarks/: 1_setBookmarks  2_setBookmarks
tests/daisyonline-service-10/stress_setReadingSystemAttributes/: request
wsdl/: KeyExchange-2005-1.xsd  axis2_codegen_remove_xsi_types.patch  bookmark-2005-1.xsd  do-wsdl-10.wsdl  generate-stubs.sh  install-codegen.sh  license.txt  stubs_adb_UAKType-compile_fix.patch  stubs_adb_bookmarks_serialize_and_derserialze_fix.patch  stubs_adb_label_type-lang_parse_fix.patch  stubs_adb_lang_type-lang_parse_fix.patch  stubs_adb_questions_deserialize_fix.patch  stubs_axis2_stubs-warnings.patch
