## Copyright (C) 2012 Kolibre
#
# This file is part of kolibre-daisyonline.
#
# Kolibre-daisyonline is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 2.1 of the License, or
# (at your option) any later version.
#
# Kolibre-daisyonline is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with kolibre-daisyonline. If not, see <http://www.gnu.org/licenses/>.
#

AUTOMAKE_OPTIONS = foreign

HDRS = \
adb_AgreementMethod.h \
adb_AgreementMethodType.h \
adb_CanonicalizationMethod.h \
adb_CanonicalizationMethodType.h \
adb_CipherData.h \
adb_CipherDataType.h \
adb_CipherReference.h \
adb_CipherReferenceType.h \
adb_CryptoBinary.h \
adb_DSAKeyValue.h \
adb_DSAKeyValueType.h \
adb_DSAKeyValueTypeSequence_type0.h \
adb_DSAKeyValueTypeSequence_type1.h \
adb_DigestMethod.h \
adb_DigestMethodType.h \
adb_DigestValue.h \
adb_DigestValueType.h \
adb_EncryptedData.h \
adb_EncryptedDataType.h \
adb_EncryptedKey.h \
adb_EncryptedKeyType.h \
adb_EncryptedType.h \
adb_EncryptionMethodType.h \
adb_EncryptionProperties.h \
adb_EncryptionPropertiesType.h \
adb_EncryptionProperty.h \
adb_EncryptionPropertyType.h \
adb_EncryptionPropertyTypeChoice.h \
adb_HMACOutputLengthType.h \
adb_IdString.h \
adb_IssuerType.h \
adb_KeyExchange.h \
adb_KeyExchangeChoice_type0.h \
adb_KeyExchangeChoice_type1.h \
adb_KeyExchange_type0.h \
adb_KeyInfo.h \
adb_KeyInfoType.h \
adb_KeyInfoTypeChoice.h \
adb_KeyName.h \
adb_KeyPairType.h \
adb_KeySizeType.h \
adb_KeyValue.h \
adb_KeyValueType.h \
adb_KeysType.h \
adb_KeysTypeChoice_type0.h \
adb_Manifest.h \
adb_ManifestType.h \
adb_MgmtData.h \
adb_Object.h \
adb_ObjectType.h \
adb_ObjectTypeSequence.h \
adb_PGPData.h \
adb_PGPDataType.h \
adb_PGPDataTypeSequence_type0.h \
adb_PGPDataTypeSequence_type1.h \
adb_RSAKeyValue.h \
adb_RSAKeyValueType.h \
adb_Reference.h \
adb_ReferenceList.h \
adb_ReferenceListChoice.h \
adb_ReferenceListChoiceE3.h \
adb_ReferenceList_type0.h \
adb_ReferenceType.h \
adb_ReferenceTypeE2.h \
adb_RetrievalMethod.h \
adb_RetrievalMethodType.h \
adb_SPKIData.h \
adb_SPKIDataType.h \
adb_SPKIDataTypeSequence.h \
adb_Signature.h \
adb_SignatureMethod.h \
adb_SignatureMethodType.h \
adb_SignatureProperties.h \
adb_SignaturePropertiesType.h \
adb_SignatureProperty.h \
adb_SignaturePropertyType.h \
adb_SignaturePropertyTypeChoice.h \
adb_SignatureType.h \
adb_SignatureValue.h \
adb_SignatureValueType.h \
adb_SignedInfo.h \
adb_SignedInfoType.h \
adb_SimpleLiteral.h \
adb_Transform.h \
adb_TransformType.h \
adb_TransformTypeChoice.h \
adb_Transforms.h \
adb_TransformsType.h \
adb_TransformsTypeE1.h \
adb_UAKType.h \
adb_URI.h \
adb_X509Data.h \
adb_X509DataType.h \
adb_X509DataTypeChoice_type0.h \
adb_X509DataTypeSequence.h \
adb_X509IssuerSerialType.h \
adb_additionalTransferProtocols_type0.h \
adb_announcement_type0.h \
adb_announcements.h \
adb_announcements_type0.h \
adb_any.h \
adb_audio.h \
adb_audio_type0.h \
adb_audio_type1.h \
adb_bookmark.h \
adb_bookmarkContent.h \
adb_bookmarkContentChoice_type0.h \
adb_bookmarkContentSequence_type0.h \
adb_bookmarkSet.h \
adb_bookmarkSetChoice_type0.h \
adb_bookmarkSetChoice_type1.h \
adb_bookmarkSet_type0.h \
adb_bookmark_type0.h \
adb_charOffset.h \
adb_choice_type0.h \
adb_choices_type0.h \
adb_config_type0.h \
adb_contentItem_type0.h \
adb_contentList.h \
adb_contentList_type0.h \
adb_contentMetadata.h \
adb_contentMetadata_type0.h \
adb_contributor.h \
adb_coverage.h \
adb_creator.h \
adb_data_type0.h \
adb_data_type1.h \
adb_date.h \
adb_description.h \
adb_dir_type0.h \
adb_format.h \
adb_getBookmarks.h \
adb_getBookmarksResponse.h \
adb_getContentList.h \
adb_getContentListResponse.h \
adb_getContentMetadata.h \
adb_getContentMetadataResponse.h \
adb_getContentResources.h \
adb_getContentResourcesResponse.h \
adb_getKeyExchangeObject.h \
adb_getKeyExchangeObjectResponse.h \
adb_getQuestions.h \
adb_getQuestionsResponse.h \
adb_getServiceAnnouncements.h \
adb_getServiceAnnouncementsResponse.h \
adb_getServiceAttributes.h \
adb_getServiceAttributesResponse.h \
adb_hilite.h \
adb_hiliteContent.h \
adb_hiliteContentChoice_type0.h \
adb_hiliteContentSequence_type0.h \
adb_hiliteEnd_type0.h \
adb_hiliteStart_type0.h \
adb_hilite_type0.h \
adb_identifier.h \
adb_input.h \
adb_inputQuestion.h \
adb_inputQuestion_type0.h \
adb_inputTypes_type0.h \
adb_input_type0.h \
adb_internalServerErrorFault.h \
adb_internalServerErrorFaultType.h \
adb_invalidOperationFault.h \
adb_invalidOperationFaultType.h \
adb_invalidParameterFault.h \
adb_invalidParameterFaultType.h \
adb_issueContent.h \
adb_issueContentResponse.h \
adb_item.h \
adb_keyRing.h \
adb_keyRing_type0.h \
adb_label.h \
adb_label_type0.h \
adb_lang_type0.h \
adb_language.h \
adb_lastmark.h \
adb_lastmark_type0.h \
adb_logOff.h \
adb_logOffResponse.h \
adb_logOn.h \
adb_logOnResponse.h \
adb_markAnnouncementsAsRead.h \
adb_markAnnouncementsAsReadResponse.h \
adb_meta_type0.h \
adb_metadataChoice_type0.h \
adb_metadataChoice_type1.h \
adb_metadata_type0.h \
adb_method_type0.h \
adb_method_type1.h \
adb_mimeType_type0.h \
adb_multipleChoiceQuestion.h \
adb_multipleChoiceQuestion_type0.h \
adb_ncxRef.h \
adb_noActiveSessionFault.h \
adb_noActiveSessionFaultType.h \
adb_note.h \
adb_noteSequence_type0.h \
adb_noteSequence_type1.h \
adb_note_type0.h \
adb_operationNotSupportedFault.h \
adb_operationNotSupportedFaultType.h \
adb_operation_type0.h \
adb_operation_type1.h \
adb_priority_type0.h \
adb_protectionFormat_type0.h \
adb_protectionFormat_type1.h \
adb_publisher.h \
adb_questions.h \
adb_questionsChoice_type0.h \
adb_questionsChoice_type1.h \
adb_questions_type0.h \
adb_read.h \
adb_read_type0.h \
adb_readingSystemAttributes.h \
adb_readingSystemAttributesChoice_type0.h \
adb_readingSystemAttributesChoice_type1.h \
adb_readingSystemAttributes_type0.h \
adb_relation.h \
adb_resource_type0.h \
adb_resources.h \
adb_resources_type0.h \
adb_returnContent.h \
adb_returnContentResponse.h \
adb_rights.h \
adb_sample_type0.h \
adb_serviceAttributes.h \
adb_serviceAttributes_type0.h \
adb_serviceProvider_type0.h \
adb_service_type0.h \
adb_setBookmarks.h \
adb_setBookmarksResponse.h \
adb_setReadingSystemAttributes.h \
adb_setReadingSystemAttributesResponse.h \
adb_source.h \
adb_subject.h \
adb_supportedContentFormats_type0.h \
adb_supportedContentProtectionFormats_type0.h \
adb_supportedContentSelectionMethods_type0.h \
adb_supportedInputTypes_type0.h \
adb_supportedMimeTypes_type0.h \
adb_supportedOptionalOperations_type0.h \
adb_supportedUplinkAudioCodecs_type0.h \
adb_text.h \
adb_timeOffset.h \
adb_title.h \
adb_titleE0.h \
adb_title_type0.h \
adb_type.h \
adb_type_type0.h \
adb_type_type1.h \
adb_uid.h \
adb_userResponse_type0.h \
adb_userResponses.h \
adb_userResponses_type0.h \
axis2_extension_mapper.h \
axis2_stub_Kolibre_DaisyOnline.h

SRCS = \
adb_AgreementMethod.c \
adb_AgreementMethodType.c \
adb_CanonicalizationMethod.c \
adb_CanonicalizationMethodType.c \
adb_CipherData.c \
adb_CipherDataType.c \
adb_CipherReference.c \
adb_CipherReferenceType.c \
adb_CryptoBinary.c \
adb_DSAKeyValue.c \
adb_DSAKeyValueType.c \
adb_DSAKeyValueTypeSequence_type0.c \
adb_DSAKeyValueTypeSequence_type1.c \
adb_DigestMethod.c \
adb_DigestMethodType.c \
adb_DigestValue.c \
adb_DigestValueType.c \
adb_EncryptedData.c \
adb_EncryptedDataType.c \
adb_EncryptedKey.c \
adb_EncryptedKeyType.c \
adb_EncryptedType.c \
adb_EncryptionMethodType.c \
adb_EncryptionProperties.c \
adb_EncryptionPropertiesType.c \
adb_EncryptionProperty.c \
adb_EncryptionPropertyType.c \
adb_EncryptionPropertyTypeChoice.c \
adb_HMACOutputLengthType.c \
adb_IdString.c \
adb_IssuerType.c \
adb_KeyExchange.c \
adb_KeyExchangeChoice_type0.c \
adb_KeyExchangeChoice_type1.c \
adb_KeyExchange_type0.c \
adb_KeyInfo.c \
adb_KeyInfoType.c \
adb_KeyInfoTypeChoice.c \
adb_KeyName.c \
adb_KeyPairType.c \
adb_KeySizeType.c \
adb_KeyValue.c \
adb_KeyValueType.c \
adb_KeysType.c \
adb_KeysTypeChoice_type0.c \
adb_Manifest.c \
adb_ManifestType.c \
adb_MgmtData.c \
adb_Object.c \
adb_ObjectType.c \
adb_ObjectTypeSequence.c \
adb_PGPData.c \
adb_PGPDataType.c \
adb_PGPDataTypeSequence_type0.c \
adb_PGPDataTypeSequence_type1.c \
adb_RSAKeyValue.c \
adb_RSAKeyValueType.c \
adb_Reference.c \
adb_ReferenceList.c \
adb_ReferenceListChoice.c \
adb_ReferenceListChoiceE3.c \
adb_ReferenceList_type0.c \
adb_ReferenceType.c \
adb_ReferenceTypeE2.c \
adb_RetrievalMethod.c \
adb_RetrievalMethodType.c \
adb_SPKIData.c \
adb_SPKIDataType.c \
adb_SPKIDataTypeSequence.c \
adb_Signature.c \
adb_SignatureMethod.c \
adb_SignatureMethodType.c \
adb_SignatureProperties.c \
adb_SignaturePropertiesType.c \
adb_SignatureProperty.c \
adb_SignaturePropertyType.c \
adb_SignaturePropertyTypeChoice.c \
adb_SignatureType.c \
adb_SignatureValue.c \
adb_SignatureValueType.c \
adb_SignedInfo.c \
adb_SignedInfoType.c \
adb_SimpleLiteral.c \
adb_Transform.c \
adb_TransformType.c \
adb_TransformTypeChoice.c \
adb_Transforms.c \
adb_TransformsType.c \
adb_TransformsTypeE1.c \
adb_UAKType.c \
adb_URI.c \
adb_X509Data.c \
adb_X509DataType.c \
adb_X509DataTypeChoice_type0.c \
adb_X509DataTypeSequence.c \
adb_X509IssuerSerialType.c \
adb_additionalTransferProtocols_type0.c \
adb_announcement_type0.c \
adb_announcements.c \
adb_announcements_type0.c \
adb_any.c \
adb_audio.c \
adb_audio_type0.c \
adb_audio_type1.c \
adb_bookmark.c \
adb_bookmarkContent.c \
adb_bookmarkContentChoice_type0.c \
adb_bookmarkContentSequence_type0.c \
adb_bookmarkSet.c \
adb_bookmarkSetChoice_type0.c \
adb_bookmarkSetChoice_type1.c \
adb_bookmarkSet_type0.c \
adb_bookmark_type0.c \
adb_charOffset.c \
adb_choice_type0.c \
adb_choices_type0.c \
adb_config_type0.c \
adb_contentItem_type0.c \
adb_contentList.c \
adb_contentList_type0.c \
adb_contentMetadata.c \
adb_contentMetadata_type0.c \
adb_contributor.c \
adb_coverage.c \
adb_creator.c \
adb_data_type0.c \
adb_data_type1.c \
adb_date.c \
adb_description.c \
adb_dir_type0.c \
adb_format.c \
adb_getBookmarks.c \
adb_getBookmarksResponse.c \
adb_getContentList.c \
adb_getContentListResponse.c \
adb_getContentMetadata.c \
adb_getContentMetadataResponse.c \
adb_getContentResources.c \
adb_getContentResourcesResponse.c \
adb_getKeyExchangeObject.c \
adb_getKeyExchangeObjectResponse.c \
adb_getQuestions.c \
adb_getQuestionsResponse.c \
adb_getServiceAnnouncements.c \
adb_getServiceAnnouncementsResponse.c \
adb_getServiceAttributes.c \
adb_getServiceAttributesResponse.c \
adb_hilite.c \
adb_hiliteContent.c \
adb_hiliteContentChoice_type0.c \
adb_hiliteContentSequence_type0.c \
adb_hiliteEnd_type0.c \
adb_hiliteStart_type0.c \
adb_hilite_type0.c \
adb_identifier.c \
adb_input.c \
adb_inputQuestion.c \
adb_inputQuestion_type0.c \
adb_inputTypes_type0.c \
adb_input_type0.c \
adb_internalServerErrorFault.c \
adb_internalServerErrorFaultType.c \
adb_invalidOperationFault.c \
adb_invalidOperationFaultType.c \
adb_invalidParameterFault.c \
adb_invalidParameterFaultType.c \
adb_issueContent.c \
adb_issueContentResponse.c \
adb_item.c \
adb_keyRing.c \
adb_keyRing_type0.c \
adb_label.c \
adb_label_type0.c \
adb_lang_type0.c \
adb_language.c \
adb_lastmark.c \
adb_lastmark_type0.c \
adb_logOff.c \
adb_logOffResponse.c \
adb_logOn.c \
adb_logOnResponse.c \
adb_markAnnouncementsAsRead.c \
adb_markAnnouncementsAsReadResponse.c \
adb_meta_type0.c \
adb_metadataChoice_type0.c \
adb_metadataChoice_type1.c \
adb_metadata_type0.c \
adb_method_type0.c \
adb_method_type1.c \
adb_mimeType_type0.c \
adb_multipleChoiceQuestion.c \
adb_multipleChoiceQuestion_type0.c \
adb_ncxRef.c \
adb_noActiveSessionFault.c \
adb_noActiveSessionFaultType.c \
adb_note.c \
adb_noteSequence_type0.c \
adb_noteSequence_type1.c \
adb_note_type0.c \
adb_operationNotSupportedFault.c \
adb_operationNotSupportedFaultType.c \
adb_operation_type0.c \
adb_operation_type1.c \
adb_priority_type0.c \
adb_protectionFormat_type0.c \
adb_protectionFormat_type1.c \
adb_publisher.c \
adb_questions.c \
adb_questionsChoice_type0.c \
adb_questionsChoice_type1.c \
adb_questions_type0.c \
adb_read.c \
adb_read_type0.c \
adb_readingSystemAttributes.c \
adb_readingSystemAttributesChoice_type0.c \
adb_readingSystemAttributesChoice_type1.c \
adb_readingSystemAttributes_type0.c \
adb_relation.c \
adb_resource_type0.c \
adb_resources.c \
adb_resources_type0.c \
adb_returnContent.c \
adb_returnContentResponse.c \
adb_rights.c \
adb_sample_type0.c \
adb_serviceAttributes.c \
adb_serviceAttributes_type0.c \
adb_serviceProvider_type0.c \
adb_service_type0.c \
adb_setBookmarks.c \
adb_setBookmarksResponse.c \
adb_setReadingSystemAttributes.c \
adb_setReadingSystemAttributesResponse.c \
adb_source.c \
adb_subject.c \
adb_supportedContentFormats_type0.c \
adb_supportedContentProtectionFormats_type0.c \
adb_supportedContentSelectionMethods_type0.c \
adb_supportedInputTypes_type0.c \
adb_supportedMimeTypes_type0.c \
adb_supportedOptionalOperations_type0.c \
adb_supportedUplinkAudioCodecs_type0.c \
adb_text.c \
adb_timeOffset.c \
adb_title.c \
adb_titleE0.c \
adb_title_type0.c \
adb_type.c \
adb_type_type0.c \
adb_type_type1.c \
adb_uid.c \
adb_userResponse_type0.c \
adb_userResponses.c \
adb_userResponses_type0.c \
axis2_extension_mapper.c \
axis2_stub_Kolibre_DaisyOnline.c

noinst_LTLIBRARIES = libdaisyonlinestubs.la

libdaisyonlinestubs_la_SOURCES = $(SRCS)
libdaisyonlinestubs_la_LDFLAGS = @AXIS2C_LIBS@ \
								 -laxutil \
								 -laxis2_axiom \
								 -laxis2_engine \
								 -laxis2_parser \
								 -laxis2_http_sender \
								 -laxis2_http_receiver
libdaisyonlinestubs_la_CFLAGS = @AXIS2C_CFLAGS@ -Wno-unused-variable
libdaisyonlinestubs_la_CPPFLAGS = @AXIS2C_CFLAGS@ -Wno-unused-variable

EXTRA_DIST = $(HDRS)
